[workspace]
members = ["contracts/*"]
resolver = "2"

[workspace.package]
version       = "0.1.0"
edition       = "2021"
license       = "Apache-2.0"
repository    = "https://github.com/srdtrk/cw-nft-ica"
rust-version  = "1.73"
keywords      = ["cosmos", "cosmwasm", "ibc", "nft", "ica"]
authors       = ["srdtrk <srdtrk@hotmail.com>"]

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
panic = 'abort'
rpath = false
# Please do not disable these. Doing so will cause overflow checks in
# all workspace members to stop working. Overflows should be errors.
overflow-checks = true

[workspace.dependencies]
cosmwasm-schema = "1.5.0"
cosmwasm-std = { version = "1.5.0", features = [
    "cosmwasm_1_2",
    # Enable this if you only deploy to chains that have CosmWasm 1.4 or higher
    # "cosmwasm_1_4",
] }
cw-storage-plus = "1.1.0"
cw2 = "1.1.1"
schemars = "0.8.15"
serde = { version = "1.0.189", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.49" }
cw-ica-controller = { git = "https://github.com/srdtrk/cw-ica-controller.git", rev = "7150af52", default-features = false }
cw-ownable = "0.5.1"
cw721 = "0.18.0"
cw721-base = { version = "0.18.0", features = ["library"] }
cw721-ica-extension = { version = "0.1.0", path = "./contracts/cw721-ica-extension" }
