[workspace]
members = ["contracts/*"]
resolver = "2"

[workspace.package]
version       = "0.1.0"
edition       = "2021"
license       = "Apache-2.0"
repository    = "https://github.com/srdtrk/cw-nft-ica"
rust-version  = "1.73"
keywords      = ["cosmos", "cosmwasm", "ibc", "nft", "ica"]
authors       = ["srdtrk <srdtrk@hotmail.com>"]

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
panic = 'abort'
rpath = false
# Please do not disable these. Doing so will cause overflow checks in
# all workspace members to stop working. Overflows should be errors.
overflow-checks = true

[workspace.dependencies]
cosmwasm-schema = "1.5.0"
cosmwasm-std = { package = "secret-cosmwasm-std", version = "1.1.11", features = [
    "stargate",
    "ibc3",
] }
secret-toolkit = "0.10.0"
schemars = "0.8.15"
serde = { version = "1.0.189", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.49" }
cw-ica-controller = { git = "https://github.com/srdtrk/cw-ica-controller/", branch = "secret-cosmwasm", default-features = false, features = ["staking"] }
snip721-reference-impl = { git = "https://github.com/baedrik/snip721-reference-impl.git", commit = "de9551c2bef4c07c844bbc21c52d367f0da80213" }
